--- a/GRUPO44.ipynb
+++ b/GRUPO44.ipynb
@@ -154,7 +154,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pip install streamlit plotly pandas numpy seaborn matplotlib"
+        "\"\"\"REQUERIMIENTS\"\"\"\n",
+        "streamlit\n",
+        "matplotlib\n",
+        "seaborn\n",
+        "pandas\n",
+        "numpy\n",
+        "scipy\n",
+        "plotly\n",
+        "altair\n",
+        "\n"
       ]
     },
     {
@@ -376,7 +385,7 @@
         "\n",
         "# ----- *** Configuración de la aplicación Streamlit *** -----\n",
         "st.set_page_config(\n",
-        "    page_title=\"Análisis de Datos\",\n",
+        "    page_title=\"📊 Dashboard Analítico de Ventas de Supermercado Grupo 41\",\n",
         "    page_icon=\"📊\",\n",
         "    layout=\"wide\",\n",
         "    initial_sidebar_state=\"expanded\"\n",
@@ -386,7 +395,7 @@
         "# ----- *** Banner de la aplicación *** -----\n",
         "st.markdown(\"\"\"\n",
         "<div style='padding-top:10px'>\n",
-        "    <h1 style='margin-bottom:0;'>📊 Dashboard de Análisis de Ventas</h1>\n",
+        "    <h1 style='margin-bottom:0;'>📊 Dashboard Analítico de Ventas de Supermercado</h1>\n",
         "    <p style='font-size:18px; color:gray; margin-top:4px; height:auto;'>\n",
         "        Plataforma interactiva para explorar, visualizar y analizar los datos de ventas de una tienda.<br>\n",
         "        Permite identificar tendencias, comparar productos, analizar el comportamiento de los clientes y evaluar métodos de pago.\n",
@@ -398,6 +407,18 @@
         "# ----- *** Banner de sidebar de la aplicación *** -----\n",
         "st.sidebar.image('https://upload.wikimedia.org/wikipedia/commons/a/a4/Universidad-autonoma-de-chile.png', width=400 )  # Ajusta el tamaño de la imagen según sea necesario\n",
         "st.sidebar.header(\"Menú de Navegación\")\n",
+        "st.sidebar.markdown(\"\"\"\n",
+        "<div style='background-color:#f0f0f0; border-radius:8px; padding:16px; margin-bottom:16px; font-size:15px;'>\n",
+        "<b>Integrantes del grupo:</b><br>\n",
+        "- Stephania Cañole<br>\n",
+        "- Vitto De la Fuente<br>\n",
+        "- Sergio Gutierrez<br>\n",
+        "- Nicolas Morales<br>\n",
+        "- Diego Nalli<br>\n",
+        "<br>\n",
+        "<i>Trabajo realizado para el módulo <b>Visualización de Información</b> en el área de <b>Big Data</b>.</i>\n",
+        "</div>\n",
+        "\"\"\", unsafe_allow_html=True)\n",
         "st.sidebar.info(\"Aquí aparecerán todos los filtros e información de las columnas una vez que se cargue el fichero de datos de la evaluación.\")\n",
         "# ------------------------------------------------------ Fin de banner de sidebar\n",
         "\n",
@@ -458,6 +479,7 @@
         "\n",
         "        # ---- *** Mostrar el DataFrame con Streamlit *** -----\n",
         "        st.dataframe(df.head(filas),column_config=config, use_container_width=True, height=300)\n",
+        "        \n",
         "        st.success(f\"✅ Archivo procesado correctamente en {end - start:.4f} segundos.\")\n",
         "\n",
         "    except Exception as e:\n",
@@ -565,6 +587,29 @@
         "    )\n",
         "    # Filtrar el DataFrame según selección de Branch\n",
         "    df_cliente = df_cliente[df_cliente['Branch'].isin(selected_branches)]\n",
+        "\n",
+        "    # ----- *** KPIs resumen en 4 columnas *** -----\n",
+        "    st.markdown(\"## 📈 Métricas Clave (KPIs)\")\n",
+        "\n",
+        "    kpi1, kpi2, kpi3, kpi4 = st.columns(4)\n",
+        "\n",
+        "    with kpi1:\n",
+        "        total_ingresos = df_cliente['Total'].sum()\n",
+        "        st.metric(label=\"Ingresos Totales\", value=f\"${total_ingresos:,.2f}\")\n",
+        "\n",
+        "    with kpi2:\n",
+        "        ingreso_bruto = df_cliente['gross income'].sum()\n",
+        "        st.metric(label=\"Ingreso Bruto Total\", value=f\"${ingreso_bruto:,.2f}\")\n",
+        "\n",
+        "    with kpi3:\n",
+        "        rating_promedio = df_cliente['Rating'].mean()\n",
+        "        st.markdown(\"**Calificación Promedio**\")\n",
+        "        st.markdown(f\"<h2 style='margin-top:-10px;'>{rating_promedio:.2f} ⭐</h2>\", unsafe_allow_html=True)\n",
+        "\n",
+        "    with kpi4:\n",
+        "        num_transacciones = len(df_cliente)\n",
+        "        st.metric(label=\"Número de Transacciones\", value=f\"{num_transacciones:,}\")\n",
+        "\n",
         "\n",
         "\n",
         "# ------------------------------------------------------ Fin de estado de variables \n",
@@ -1259,7 +1304,9 @@
           "output_type": "execute_result"
         }
       ],
-      "source": []
+      "source": [
+        "https://miappapppy-cdenqg8smehta6ys2nd9db.streamlit.app/"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1287,10 +1334,7 @@
         }
       ],
       "source": [
-        "'''\n",
-        "Poner aquí la url de su dashboard en el servidor de Streamlit.\n",
-        "Ejemplo: https://share.streamlit.io/streamlit/demo-uber-nyc-pickups\n",
-        "'''"
+        "https://miappapppy-cdenqg8smehta6ys2nd9db.streamlit.app/"
       ]
     },
     {
@@ -1303,29 +1347,14 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a7a03bf9",
+      "cell_type": "markdown",
+      "id": "643948cc",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'\\nEscriban acá su reflexión sobre el Dashboard.\\n'"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
-        "'''\n",
-        "Según la base de datos utilizada, podemos visualizar donde están las productos con menores ventas y asi poder tomar decisiones de marketing para poder aumentar esas ventas, \n",
-        "Con respecto a los que tienen membresia, este tiene un mayor gastos con respecto a nuestros clientes normales.\n",
-        "Realizar este tipo de analisis nos permite ver cada uno de nuestras bajas y asi poder mejorar las ventas\n",
-        "ar\n",
-        "'''"
+        "# --- Describan su Dashboard (Gráficos Utilizados y Justificación de su uso --- \n",
+        "\n",
+        "\n",
+        "> El análisis realizado en este notebook permitió comprender en profundidad el comportamiento de ventas y clientes de la tienda de conveniencia. Se identificó que las ventas totales presentan una tendencia estable a lo largo del tiempo, sin variaciones abruptas entre días u horas. Los ingresos por línea de producto muestran una distribución equilibrada, sin un producto claramente dominante, lo que sugiere una oferta diversificada y atractiva para distintos segmentos de clientes. La calificación de los clientes no sigue una distribución normal ni presenta sesgos significativos, indicando una satisfacción homogénea. Además, no se encontraron diferencias significativas en el gasto entre clientes miembros y normales, y los métodos de pago son utilizados de manera equilibrada. Las correlaciones entre variables numéricas reflejan la estructura derivada de los datos, sin aportar relaciones analíticas adicionales. Finalmente, la composición del ingreso bruto por sucursal y línea de producto evidencia una contribución balanceada entre las distintas categorías. En conjunto, los resultados sugieren que la tienda mantiene una operación estable, con clientes satisfechos y una oferta de productos y métodos de pago bien diversificada.\n"
       ]
     },
     {
